--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,6 +20,7 @@
   line-height: 26px;
   /* font-weight: 500; */
   /* font-family: var(--font-big); */
+  transition: all .1s;
 }
 
 a {
@@ -40,6 +41,10 @@ img {
   font-family: var(--font-big);
   font-weight: var(--fw-content-title);
   padding: 13px 32px 12px;
+}
+
+.btn:hover {
+  background-color: var(--color-secondary);
 }
 
 .title_span {
@@ -69,6 +74,14 @@ img {
   display: inline-block;
   text-decoration: none;
   padding-right: 10px;
+}
+
+.info_contact a:hover span {
+  color: var(--color-secondary);
+}
+
+.info_contact a:hover span svg{
+  fill: var(--color-secondary);
 }
 
 .info_contact span {
@@ -104,14 +117,30 @@ img {
   border: 1px solid #fff;
   border-radius: 50%;
   margin-left: 10px;
-  display: block;
+  display: inline-block;
   padding: 7.5px 0;
 }
 
-.header_info_icon img {
+.header_info_icon span {
   display: block;
-  height: 100%;
-  margin: auto;
+  width: fit-content;
+  margin: 0 auto;
+  fill: #fff;
+}
+
+.header_info_icon span svg {
+  display: block;
+  height: 15px;
+  width: 15px;
+  /* fill: #fff; */
+}
+
+.header_info_icon:hover {
+  background-color: #fff;
+}
+
+.header_info_icon:hover span {
+  fill: var(--color-primary);
 }
 
 /* nav設定 */
@@ -151,6 +180,11 @@ nav {
 
 .menu:last-child {
   margin: 0;
+}
+
+.menu:hover {
+  color: var(--color-primary);
+  cursor: pointer;
 }
 
 .contact_btn {
@@ -218,6 +252,7 @@ h1 {
 .advantage_card {
   display: inline-block;
   width: 30%;
+  height: 100%;
   padding: 30px 15px;
   margin: 0 15px;
   vertical-align: top;
@@ -231,6 +266,10 @@ h1 {
   width: fit-content;
   background-color: var(--color-primary);
   border-radius: 50%;
+}
+
+.advantage_icon span:hover {
+  background-color: var(--color-secondary)
 }
 
 .advantage_icon span svg{
@@ -330,7 +369,7 @@ h2 {
 
 /* section4 banner */
 .banner {
-  background: url(../img/ready-for-your-next-adventure.jpg) no-repeat center / cover;
+  background: url(https://templatekits.techeshta.com/accountant/wp-content/uploads/sites/8/2022/10/ready-for-your-next-adventure.jpg) no-repeat center / cover;
 }
 
 .banner_bgcover {
@@ -391,6 +430,7 @@ h3 {
   text-align-last: justify;
 }
 
+
 .service_card {
   display: inline-block;
   width: 30%;
@@ -431,6 +471,23 @@ h3 {
   color: var(--color-text-black);
   font-family: var(--font-small);
   font-weight: var(--fw-content-text);
+}
+
+.service_card:hover {
+  background-color: var(--color-primary);
+  color: #fff;
+}
+
+.service_card:hover p{
+  color: #fff;
+}
+
+.service_card:hover span {
+  background-color: #fff;
+}
+
+.service_card:hover svg {
+  fill: var(--color-primary);
 }
 
 .service_btn {
@@ -543,6 +600,10 @@ h3 {
 .member_photo img {
   border-radius: 15px 15px 0 0;
   vertical-align: middle;
+}
+
+.member_photo:hover img {
+  filter: brightness(65%);
 }
 
 .member_info {
@@ -812,6 +873,10 @@ h3 {
   padding: 9px 0;
 }
 
+.footer_logo_icon:hover {
+  background-color: var(--color-secondary);
+}
+
 .footer_logo_icon img {
   display: block;
   height: 100%;
@@ -825,6 +890,10 @@ h3 {
 .footer_info_list {
   margin-bottom: 12px;
   text-align-last: left;
+}
+
+.footer_info_list:hover a {
+  color: var(--color-primary);
 }
 
 .footer_info_list a, .footer_info_list div {
